re PR middle-end/34973 (Wno-strict-aliasing is not working)

2008-05-03  Richard Guenther  <rguenther@suse.de>

	PR middle-end/34973
	* opts.c (set_Wstrict_aliasing): Handle the turn-off case.

From-SVN: r134902